--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -27,10 +27,10 @@ jobs:
           pip install -r requirements.txt
       - name: Check migrations
         run:
-          python manage.py makemigrations
-          python manage.py migrate
-          python manage.py check
+          python src/manage.py makemigrations
+          python src/manage.py migrate
+          python src/manage.py check
 
       - name: Run tests
         run:
-          python manage.py test&&flake8
+          python src/manage.py test&&flake8
