--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -22,15 +22,15 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
-        run:
+        run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Check migrations
-        run:
+        run: |
           python src/manage.py makemigrations
           python src/manage.py migrate
           python src/manage.py check
 
       - name: Run tests
-        run:
+        run: |
           python src/manage.py test&&flake8
