--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -24,13 +24,14 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install pipenv
+          pipenv install
       - name: Check migrations
         run: |
-          python src/manage.py makemigrations
-          python src/manage.py migrate
-          python src/manage.py check
+          pipenv run python src/manage.py makemigrations
+          pipenv run python src/manage.py migrate
+          pipenv run python src/manage.py check
 
       - name: Run tests
         run: |
-          python src/manage.py test&&flake8
+          pipenv run python src/manage.py test&&flake8
