--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -26,6 +26,7 @@ jobs:
           python3 -m pip install --upgrade pip
           python3 -m pip install pipenv
           pipenv install
+          pipenv install --dev
       - name: Check migrations
         run: |
           pipenv run python src/manage.py makemigrations
