--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip
           python3 -m pip install pipenv
-          python3 -m pip install graphviz libgraphviz-dev pkg-config
+          python3 -m pip install graphviz libgraphviz
           pipenv install
           pipenv install --dev
       - name: Check migrations
