--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,8 @@ django-extensions = "*"
 black = "==22.8.0"
 flake8 = "==5.0.4"
 isort = "==5.10.1"
+pydot = "*"
+graphviz = "*"
 
 [requires]
 python_version = "*"
