--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 drf-yasg==1.21.4
 flake8==5.0.4
+graphviz==0.20.1
 idna==3.4
 inflection==0.5.1
 isort==5.10.1
@@ -31,6 +32,7 @@ pathspec==0.10.1
 phonenumberslite==8.12.56
 Pillow==9.2.0
 platformdirs==2.5.2
+psycopg2-binary==2.9.4
 pycodestyle==2.9.1
 pycparser==2.21
 pydot==1.4.2
