--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,5 +26,18 @@ services:
     volumes:
       - pg_data:/var/lib/postgresql/data
 
+  pg_admin:
+    image: dpage/pgadmin4
+    container_name: pg_admin
+    ports:
+      - 5000:80
+    env_file:
+      - .env
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    depends_on:
+      - postgres
+
 volumes:
   pg_data: { }
+  pgadmin_data: { }
