--- a/requirements.txt
+++ b/requirements.txt
@@ -7,15 +7,23 @@ click==8.1.3
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==38.0.1
+dataclasses==0.6
 defusedxml==0.7.1
 Django==4.1.1
 django-extensions==3.2.1
+django-leaflet==0.28.3
+django-location-field==2.1.0
+django-mongodb-engine @ git+https://github.com/django-nonrel/mongodb-engine@1314786975d3d17fb1a2e870dfba004158a5e431
 django-phonenumber-field==7.0.0
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==4.8.0
+djangotoolbox==1.8.0
+djongo==1.2.31
 djoser==2.1.0
+dnspython==2.2.1
 drf-yasg==1.21.4
+Faker==15.1.1
 flake8==5.0.4
 graphviz==0.20.1
 idna==3.4
@@ -25,11 +33,12 @@ itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 mccabe==0.7.0
+mongoengine==0.24.2
 mypy-extensions==0.4.3
-oauthlib==3.2.1
+oauthlib==3.2.2
 packaging==21.3
 pathspec==0.10.1
-phonenumberslite==8.12.56
+phonenumberslite==8.12.57
 Pillow==9.2.0
 platformdirs==2.5.2
 psycopg2-binary==2.9.4
@@ -37,14 +46,16 @@ pycodestyle==2.9.1
 pycparser==2.21
 pydot==1.4.2
 pyflakes==2.5.0
-PyJWT==2.5.0
+PyJWT==2.6.0
+pymongo==4.3.2
 pyparsing==3.0.9
+python-dateutil==2.8.2
 python3-openid==3.2.0
-pytz==2022.4
+pytz==2022.5
 requests==2.28.1
 requests-oauthlib==1.3.1
 ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.6
+ruamel.yaml.clib==0.2.7
 simplejwt==2.0.1
 six==1.16.0
 social-auth-app-django==4.0.0
