docker added nginx and two pages

--- a/.env
+++ b/.env
@@ -1,6 +1,13 @@
+MODE=dev
+DJANGO_SETTINGS_MODULE=config.settings.${MODE}
+
+LOCAL_PORT=8010
+WSGI_PORT=8008
+
 POSTGRES_DB=PartsOnlineStore
 POSTGRES_PASSWORD=admin
 POSTGRES_USER=admin
+
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 
