--- a/Pipfile
+++ b/Pipfile
@@ -31,6 +31,7 @@ mongoengine = "*"
 faker = "*"
 django-leaflet = "*"
 django-location-field = "*"
+webargs = "*"
 
 [dev-packages]
 black = "==22.8.0"
