--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ isort==5.10.1
 itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+marshmallow==3.18.0
 mccabe==0.7.0
 mongoengine==0.24.2
 mypy-extensions==0.4.3
@@ -41,7 +42,7 @@ pathspec==0.10.1
 phonenumberslite==8.12.57
 Pillow==9.2.0
 platformdirs==2.5.2
-psycopg2-binary==2.9.4
+psycopg2-binary==2.9.5
 pycodestyle==2.9.1
 pycparser==2.21
 pydot==1.4.2
@@ -65,3 +66,4 @@ tomli==2.0.1
 typing==3.7.4.3
 uritemplate==4.1.1
 urllib3==1.26.12
+webargs==8.2.0
