--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MODE=dev
+MODE=prod
 DJANGO_SETTINGS_MODULE=config.settings.${MODE}
 
 LOCAL_PORT=8010
@@ -23,3 +23,8 @@ ME_CONFIG_MONGODB_ADMINPASSWORD=example
 ME_CONFIG_MONGODB_URL=mongodb://root:example@mongo:27017/
 ME_CONFIG_MONGODB_PORT=27017
 ME_CONFIG_MONGODB_SERVER=mongo_cont
+
+CELERY_LOG_LEVEL=INFO
+CELERY_NUM_WORKERS=4
+
+REDIS_HOSTS=redis
