--- a/requirements.txt
+++ b/requirements.txt
@@ -31,9 +31,11 @@ djongo==1.2.31
 djoser==2.1.0
 dnspython==2.2.1
 drf-yasg==1.21.4
-Faker==15.1.3
+Faker==15.2.0
 flake8==5.0.4
+flower==1.2.0
 graphviz==0.20.1
+humanize==4.4.0
 idna==3.4
 inflection==0.5.1
 isort==5.10.1
@@ -51,7 +53,8 @@ pathspec==0.10.1
 phonenumberslite==8.12.57
 Pillow==9.3.0
 platformdirs==2.5.2
-prompt-toolkit==3.0.31
+prometheus-client==0.15.0
+prompt-toolkit==3.0.32
 psycopg2-binary==2.9.5
 pycodestyle==2.9.1
 pycparser==2.21
@@ -74,6 +77,7 @@ social-auth-app-django==4.0.0
 social-auth-core==4.3.0
 sqlparse==0.4.2
 tomli==2.0.1
+tornado==6.2
 typing==3.7.4.3
 uritemplate==4.1.1
 urllib3==1.26.12
