--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,6 +90,20 @@ services:
       - redis
       - backend
 
+  celerybeat:
+    build: ./
+    command:
+      - ./commands/start_celerybeat.sh
+    restart: on-failure
+    volumes:
+      - ./src:/PartsOnlineStore
+      - ./commands:/PartsOnlineStore/commands
+    env_file:
+      - .env
+    depends_on:
+      - redis
+      - celery
+
   redis:
     image: redis
     env_file:
