--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ dataclasses==0.6
 defusedxml==0.7.1
 Deprecated==1.2.13
 Django==4.1.1
+django-allauth==0.51.0
 django-celery-beat==2.4.0
 django-debug-toolbar==3.7.0
 django-extensions==3.2.1
@@ -34,10 +35,11 @@ djongo==1.2.31
 djoser==2.1.0
 dnspython==2.2.1
 drf-yasg==1.21.4
-Faker==15.2.0
+Faker==15.3.2
 flake8==5.0.4
 flower==1.2.0
 graphviz==0.20.1
+hashids==1.3.1
 humanize==4.4.0
 idna==3.4
 inflection==0.5.1
@@ -46,7 +48,7 @@ itypes==1.2.0
 Jinja2==3.1.2
 kombu==5.2.4
 MarkupSafe==2.1.1
-marshmallow==3.18.0
+marshmallow==3.19.0
 mccabe==0.7.0
 mongoengine==0.24.2
 mypy-extensions==0.4.3
@@ -64,7 +66,7 @@ pycparser==2.21
 pydot==1.4.2
 pyflakes==2.5.0
 PyJWT==2.6.0
-pymongo==4.3.2
+pymongo==4.3.3
 pyparsing==3.0.9
 python-crontab==2.6.0
 python-dateutil==2.8.2
