--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,9 @@ services:
       - ./src:/PartsOnlineStore/src
     env_file:
       - .env
-    depends_on:
-      - mongo
-      - postgres
+#    depends_on:
+#      - mongo
+#      - postgres
 
 #  postgres:
 #    image: postgres:12
